--- a/httpd-vhosts.conf
+++ b/httpd-vhosts.conf
@@ -1,10 +1,10 @@
 <VirtualHost *:80>
     ServerName symfony.localhost
 
-    DocumentRoot "C:/xampp/htdocs/Garage_vparrot/public"
+    DocumentRoot "C:/xampp/htdocs/Garage_6.4/public"
 
 
-    <Directory "C:/xampp/htdocs/Garage_vparrot/public">
+    <Directory "C:/xampp/htdocs/Garage_6.4/public">
      	AllowOverride None
         Require all granted
         FallbackResource /index.php
