--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -24,6 +24,10 @@ doctrine:
                 alias: App
         controller_resolver:
             auto_mapping: true
+        dql:
+            string_functions:
+                JSON_CONTAINS: Scienta\DoctrineJsonFunctions\Query\AST\Functions\Mysql\JsonContains
+
 
 when@test:
     doctrine:
